Added click lines

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -31,7 +31,7 @@ TMDB_REQUEST_TYPES:
   keyword:
     MAX_REQUEST_KEY: 10000
     URL: 'https://api.themoviedb.org/3/keyword/{id}?api_key={api_key}'
-  people:
+  country:
     MAX_REQUEST_KEY: 1000000
-    URL: 'https://api.themoviedb.org/3/people/{id}?api_key={api_key}'
+    URL: 'https://api.themoviedb.org/3/country/{id}?api_key={api_key}'
 
