--- a/config/config.yaml
+++ b/config/config.yaml
@@ -20,16 +20,16 @@ TMDB_REQUEST_TYPES:
     MAX_REQUEST_KEY: 1000000
     URL: 'https://api.themoviedb.org/3/person/{id}?api_key={api_key}'
   collection:
-    MAX_REQUEST_KEY: 20000
+    MAX_REQUEST_KEY: 1000000
     URL: 'https://api.themoviedb.org/3/collection/{id}?api_key={api_key}'
   company:
-    MAX_REQUEST_KEY: 10000
+    MAX_REQUEST_KEY: 100000
     URL: 'https://api.themoviedb.org/3/company/{id}?api_key={api_key}'
   credit:
     MAX_REQUEST_KEY: 1000000
     URL: 'https://api.themoviedb.org/3/movie/{id}/credits?api_key={api_key}'
   keyword:
-    MAX_REQUEST_KEY: 10000
+    MAX_REQUEST_KEY: 100000
     URL: 'https://api.themoviedb.org/3/keyword/{id}?api_key={api_key}'
   country:
     MAX_REQUEST_KEY: 1000000
